fix scrollbar and add Enter submit for AddToBriefcaseModal

--- a/src/components/Briefcase/BriefcaseModal/_briefcase-modal.scss
+++ b/src/components/Briefcase/BriefcaseModal/_briefcase-modal.scss
@@ -13,6 +13,9 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  max-height: 50vh;
+  overflow: auto;
+  padding-right: 5px;
 }
 
 .briefcase-modal-item__name {
